--- a/10.2.0/angular/src/app/lab-technician/create-lab-technician/create-lab-technician.component.html
+++ b/10.2.0/angular/src/app/lab-technician/create-lab-technician/create-lab-technician.component.html
@@ -4,44 +4,29 @@
     <label class="col-md-3 col-form-label">Gender</label>
     <div class="col-md-9">
       <div *ngFor="let gender of genders" class="form-check form-check-inline">
-        <input class="form-check-input" type="radio"
-               name="gender"
-               [id]="'gender_' + gender"
-               [value]="gender"
-               [(ngModel)]="technicianData.gender"
-               (ngModelChange)="onInputChange()"
-               required
-               #genderModel="ngModel"
-               #genderEl>
+        <input class="form-check-input" type="radio" name="gender" [id]="'gender_' + gender" [value]="gender"
+          [(ngModel)]="technicianData.gender" (ngModelChange)="onInputChange()" required #genderModel="ngModel"
+          #genderEl>
         <label class="form-check-label" [for]="'gender_' + gender">{{ gender }}</label>
       </div>
     </div>
   </div>
 
-    <div class="form-group row required">
+  <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="qualification">Qualification</label>
     <div class="col-md-9">
-      <input type="text" id="qualification" name="qualification"
-             class="form-control"
-             required
-             [(ngModel)]="technicianData.qualification"
-             (ngModelChange)="onInputChange()"
-             #qualificationModel="ngModel"
-             #qualificationEl>
+      <input type="text" id="qualification" name="qualification" class="form-control" required
+        [(ngModel)]="technicianData.qualification" (ngModelChange)="onInputChange()" #qualificationModel="ngModel"
+        #qualificationEl>
       <abp-validation-summary [control]="qualificationModel" [controlEl]="qualificationEl"></abp-validation-summary>
     </div>
   </div>
 
-   <div class="form-group row required">
+  <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="experience">Years of Experience</label>
     <div class="col-md-9">
-      <input type="number" id="experience" name="experience"
-             class="form-control"
-             required min="0"
-             [(ngModel)]="technicianData.yearsOfExperience"
-             (ngModelChange)="onInputChange()"
-             #expModel="ngModel"
-             #expEl>
+      <input type="number" id="experience" name="experience" class="form-control" required min="0"
+        [(ngModel)]="technicianData.yearsOfExperience" (ngModelChange)="onInputChange()" #expModel="ngModel" #expEl>
       <abp-validation-summary [control]="expModel" [controlEl]="expEl"></abp-validation-summary>
     </div>
   </div>
@@ -49,42 +34,28 @@
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="department">Department</label>
     <div class="col-md-9">
-      <input type="text" id="department" name="department"
-             class="form-control"
-             required
-             [(ngModel)]="technicianData.department"
-             (ngModelChange)="onInputChange()"
-             #departmentModel="ngModel"
-             #departmentEl>
+      <input type="text" id="department" name="department" class="form-control" required
+        [(ngModel)]="technicianData.department" (ngModelChange)="onInputChange()" #departmentModel="ngModel"
+        #departmentEl>
       <abp-validation-summary [control]="departmentModel" [controlEl]="departmentEl"></abp-validation-summary>
     </div>
   </div>
 
-    <div class="form-group row required">
+  <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="registration">Certification Number</label>
     <div class="col-md-9">
-      <input type="text" id="registration" name="registration"
-             class="form-control"
-             required
-             [(ngModel)]="technicianData.certificationNumber"
-             (ngModelChange)="onInputChange()"
-             #regModel="ngModel"
-             #regEl>
+      <input type="text" id="registration" name="registration" class="form-control" required
+        [(ngModel)]="technicianData.certificationNumber" (ngModelChange)="onInputChange()" #regModel="ngModel" #regEl>
       <abp-validation-summary [control]="regModel" [controlEl]="regEl"></abp-validation-summary>
     </div>
   </div>
 
-   <!-- Date of Birth -->
+  <!-- Date of Birth -->
   <div class="form-group row required">
     <label class="col-md-3 col-form-label" for="dob">Date of Birth</label>
     <div class="col-md-9">
-      <input type="date" id="dob" name="dob"
-             class="form-control"
-             required
-             [(ngModel)]="technicianData.dateOfBirth"
-             (ngModelChange)="onInputChange()"
-             #dobModel="ngModel"
-             #dobEl>
+      <input type="date" id="dob" name="dob" class="form-control" required [(ngModel)]="technicianData.dateOfBirth"
+        (ngModelChange)="onInputChange()" #dobModel="ngModel" #dobEl>
       <abp-validation-summary [control]="dobModel" [controlEl]="dobEl"></abp-validation-summary>
     </div>
   </div>
