--- a/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/prescriptions/prescriptions.component.html
@@ -1,1 +1,17 @@
-<p>prescriptions works!</p>
+<div [@routerTransition]>
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6">
+                    <h1>Prescription</h1>
+                </div>
+                <div class="col-6 text-right">
+                    <a href="javascript:;" class="btn bg-blue" (click)="createPrescription()">
+                        <i class="fa fa-plus-square"></i>
+                        {{ 'Create' | localize }}
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
