-> Integrated the Prescription Module with backend APIs.  -> Refactored the Angular module structure to align with current requirements, removing redundant or unused modules.  -> Currently implementing custom filter and search functionality in Appointment.

--- a/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
+++ b/10.2.0/angular/src/app/nurse/appointments/appointments.component.html
@@ -95,7 +95,7 @@
                     <div class="primeng-datatable-container">
                         <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
                             rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }">
+                            [tableStyle]="{ 'min-width': '50rem' }"  (onLazyLoad)="list($event)">
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th style="min-width: 150px" pSortableColumn="userName">
